// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a contained disabled 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-133 Button-root-144 MuiButton-contained Button-contained-136 MuiButton-containedPrimary Button-containedPrimary-137 Mui-disabled Button-disabled-143 Mui-disabled"
    data-id="button"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
  </button>
</div>
`;

exports[`it renders a contained primary by default 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-1 Button-root-12 MuiButton-contained Button-contained-4 MuiButton-containedPrimary Button-containedPrimary-5"
    data-id="primary-button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders a contained secondary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-67 Button-root-78 MuiButton-contained Button-contained-70 MuiButton-containedSecondary Button-containedSecondary-72"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders a primary inverse button 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-inverse-root-719 Button-inverse-root-728 MuiButton-contained Button-inverse-contained-722 MuiButton-containedPrimary Button-inverse-containedPrimary-723"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Inverse
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an icon 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-631 Button-root-642 MuiButton-contained Button-contained-634 MuiButton-containedPrimary Button-containedPrimary-635"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="MuiButton-startIcon MuiButton-iconSizeMedium"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-687"
          data-id="IconPhone"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"
          />
        </svg>
      </span>
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an outlined disabled 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-321 Button-root-332 MuiButton-outlined Button-outlined-327 MuiButton-outlinedPrimary Button-outlinedPrimary-328 Mui-disabled Button-disabled-331 Mui-disabled"
    data-id="button"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
  </button>
</div>
`;

exports[`it renders an outlined primary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-189 Button-root-200 MuiButton-outlined Button-outlined-195 MuiButton-outlinedPrimary Button-outlinedPrimary-196"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an outlined secondary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-255 Button-root-266 MuiButton-outlined Button-outlined-261 MuiButton-outlinedSecondary Button-outlinedSecondary-263"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an text disabled 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-509 Button-root-520 MuiButton-text MuiButton-textPrimary Mui-disabled Button-disabled-519 Mui-disabled"
    data-id="button"
    disabled=""
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
  </button>
</div>
`;

exports[`it renders an text primary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-377 Button-root-388 MuiButton-text MuiButton-textPrimary"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`it renders an text secondary 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-443 Button-root-454 MuiButton-text MuiButton-textSecondary Button-textSecondary-452"
    data-id="button"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Primary
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </button>
</div>
`;

exports[`when spinner is on it does not render a spinner when disabled is true 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-1043 Button-root-1054 MuiButton-outlined Button-outlined-1049 MuiButton-outlinedPrimary Button-outlinedPrimary-1050 Mui-disabled Button-disabled-1053 Mui-disabled"
    data-id="button"
    disabled=""
    id="btn1"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      Small
    </span>
  </button>
</div>
`;

exports[`when spinner is on it renders a 20px spinner for 'small' size 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-907 Button-root-918 MuiButton-contained Button-contained-910 MuiButton-containedPrimary Button-containedPrimary-911 MuiButton-containedSizeSmall MuiButton-sizeSmall Button-sizeSmall-908 Mui-disabled Button-disabled-917 Mui-disabled"
    data-id="button"
    disabled=""
    id="btn1"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="-span c0"
        style="opacity: 0;"
      >
        Small
      </span>
      <div
        class="MuiCircularProgress-root button-spinner-929 button-spinner-930 MuiCircularProgress-colorSecondary MuiCircularProgress-indeterminate"
        data-id="button-spinner"
        role="progressbar"
        style="width: 20px; height: 20px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;

exports[`when spinner is on it renders a 24px spinner for 'medium' size 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-839 Button-root-850 MuiButton-contained Button-contained-842 MuiButton-containedPrimary Button-containedPrimary-843 Mui-disabled Button-disabled-849 Mui-disabled"
    data-id="button"
    disabled=""
    id="btn1"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="-span c0"
        style="opacity: 0;"
      >
        Primary
      </span>
      <div
        class="MuiCircularProgress-root button-spinner-861 button-spinner-862 MuiCircularProgress-colorSecondary MuiCircularProgress-indeterminate"
        data-id="button-spinner"
        role="progressbar"
        style="width: 24px; height: 24px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;

exports[`when spinner is on it renders a spinner for 'outlined' variant 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <button
    class="MuiButtonBase-root MuiButton-root Button-root-975 Button-root-986 MuiButton-outlined Button-outlined-981 MuiButton-outlinedPrimary Button-outlinedPrimary-982 Mui-disabled Button-disabled-985 Mui-disabled"
    data-id="button"
    disabled=""
    id="btn1"
    tabindex="-1"
    type="button"
  >
    <span
      class="MuiButton-label"
    >
      <span
        class="-span c0"
        style="opacity: 0;"
      >
        Small
      </span>
      <div
        class="MuiCircularProgress-root button-spinner-997 button-spinner-998 MuiCircularProgress-colorSecondary MuiCircularProgress-indeterminate"
        data-id="button-spinner"
        role="progressbar"
        style="width: 24px; height: 24px;"
      >
        <svg
          class="MuiCircularProgress-svg"
          viewBox="22 22 44 44"
        >
          <circle
            class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
            cx="44"
            cy="44"
            fill="none"
            r="20.2"
            stroke-width="3.6"
          />
        </svg>
      </div>
    </span>
  </button>
</div>
`;
